--- a/package.json
+++ b/package.json
@@ -26,15 +26,19 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-dropzone": "^5.1.0",
     "@types/styled-components": "^5.1.7",
+    "@types/uuid": "^8.3.0",
     "electron-devtools-installer": "^3.1.1",
     "electron-is-dev": "^1.2.0",
     "electron-reload": "^1.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.2.4",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -65,6 +69,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.15",
     "concurrently": "^5.3.0",
     "electron": "^11.1.1",
     "electron-builder": "^22.9.1",
