fix: Tsconfig updates

--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -1,12 +1,13 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "module": "commonjs",
     "sourceMap": true,
     "strict": true,
     "outDir": "../build",
     "rootDir": "../",
     "noEmitOnError": true,
+    "downlevelIteration": true,
     "typeRoots": ["node_modules/@types"]
   }
 }
