chore: Add icon to build script

--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
       "buildResources": "assets"
     },
     "mac": {
-      "target": "zip"
+      "target": "zip",
+      "icon": "public/icon.png"
     },
     "win": {
-      "target": "portable"
+      "target": "portable",
+      "icon": "public/icon.png"
     },
     "linux": {
-      "target": "AppImage"
+      "target": "AppImage",
+      "category": "Utility",
+      "icon": "public/icon.png"
     }
   },
   "dependencies": {
