--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "extends": null,
     "appId": "com.gooka.app",
     "files": [
-      "build/**/*",
-      "assets/*",
-      "icons/*"
+      "build/**/*"
     ],
     "directories": {
       "buildResources": "assets"
